--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #environment variable followed by default value
-spring.application.name=${SPRING_APP_NAME:springsecsection1}
-logging.level.org.springframework.security=${SPRING_SECURITY_LOG_LEVEL:TRACE}
+#spring.application.name=${SPRING_APP_NAME:springsecsection1}
+#logging.level.org.springframework.security=${SPRING_SECURITY_LOG_LEVEL:TRACE}
 
 #spring security
 spring.security.user.name=${SECURITY_USERNAME:karim}
@@ -8,3 +8,14 @@ spring.security.user.password=${SECURITY_PASSWORD:karim}
 
 #format logs
 logging.pattern.console = ${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
+
+# DataSource
+spring.datasource.url=jdbc:mysql://localhost:3307/app_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=app_user
+spring.datasource.password=app_pass
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
