section 7 done (customizations)

--- a/src/main/resources/application_prod.properties
+++ b/src/main/resources/application_prod.properties
@@ -1,10 +1,10 @@
 #environment variable followed by default value
 #spring.application.name=${SPRING_APP_NAME:springsecsection1}
-#logging.level.org.springframework.security=${SPRING_SECURITY_LOG_LEVEL:TRACE}
+logging.level.org.springframework.security=${SPRING_SECURITY_LOG_LEVEL:ERROR}
 
-#import prod but still use default
-spring.config.import = application_prod.properties
-spring.profiles.active = default
+spring.config.activate.on-profile= prod
+
+
 
 #spring security
 spring.security.user.name=${SECURITY_USERNAME:karim}
@@ -25,4 +25,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 #session time least is 2m
-server.servlet.session.timeout=20m
+server.servlet.session.timeout=10m
